--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 p {
-  color: #FF1818;
+  color: #3066BE;
   }
 
 /* Headings */
@@ -31,13 +31,19 @@ p {
 
 /* Sections */
 .colored-section {
-  background-color: #6FB2D2;
-  color: #EEEEEE;
+  background-color: #F3DE8A;
+  color: #3066BE;
 }
 
 .white-section {
-  background-color: white;
+  background-color: #3066BE;
+  color: #F3DE8A;
 }
+
+.white-section p {
+color: #28C2FF;
+}
+
 
 /* Navigation Bar */
 .navbar {
@@ -114,19 +120,20 @@ padding:  3% 15%;
 }
 
 .feature-icon {
-  color: #85C88A;
+  color: #065143;
   font-size: 3.5rem;
   padding: 5%;
 }
 
 
 .feature-icon:hover {
-  color: #6FB2D2;
+  color: #E53D00;
 }
 
 /* Testimonial Section */
 #testimonials {
-  background-color: #C1DEAE;
+  background-color: #F3DE8A;
+  color: #3066BE;
 }
 
 .testimonial-text {
@@ -141,7 +148,7 @@ padding:  3% 15%;
 }
 
 #press {
-  background-color: #C1DEAE;
+  background-color: #F3DE8A;
   padding-bottom: 3%;
 }
 
@@ -153,6 +160,15 @@ padding:  3% 15%;
 /* Pricing Section */
 #pricing {
   padding: 100px;
+}
+
+.price {
+  background-color: #2AF5FF;
+  color: #065143;
+}
+
+.price p {
+  color: #3066BE;
 }
 
 .price-text {
